objects/ssot__InPersonEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AttendanceStatus__c</fullName>
        <label>Attendance Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementActionId__c</fullName>
        <label>Engagement Action</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>In Person Engagement Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InPersonMeetingId__c</fullName>
        <label>In Person Meeting</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820317573_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InPersonEngagement_InPersonMeetingId_rel</label>
        <referenceTo>ssot__InPersonMeeting__dlm</referenceTo>
        <relationshipLabel>InPersonEngagement_InPersonMeetingId_rel</relationshipLabel>
        <relationshipName>rel_1719820317573_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720024260861_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InPersonEngagement_EngagementActionI_rel</label>
        <referenceTo>ssot__EngagementAction__dlm</referenceTo>
        <relationshipLabel>InPersonEngagement_EngagementActionI_rel</relationshipLabel>
        <relationshipName>rel_1720024260861_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>